Fix navbar button wrap

--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -44,3 +44,18 @@
   padding: 0.2rem;
   border-radius: 3px;
 }
+
+.feed__button {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-wrap: nowrap;
+}
+
+
+@media only screen and (max-width: 395px) {
+  .feed__search {
+    display: none !important;;
+    
+  }
+}
